Revert "Make-adjusted python paths."
This reverts commit 0e90172d903ca248ddc8c967f6612c0eb56d8a36.

--- a/qt/net.launchpad.backintime.serviceHelper.service
+++ b/qt/net.launchpad.backintime.serviceHelper.service
@@ -1,4 +1,4 @@
 [D-BUS Service]
 Name=net.launchpad.backintime.serviceHelper
-Exec=/home/derek/.pyenv/versions/bit-3.12.2/bin/python3 -Es /usr/share/backintime/qt/serviceHelper.py
+Exec=/usr/bin/python3 -Es /usr/share/backintime/qt/serviceHelper.py
 User=root
