--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ install:
   - pip install -U pip
   - pip install pylint ruff flake8 pyfakefs keyring
   - pip install pyqt6 dbus-python
+  - pip install ddt PyYAML
   # add ssh public / private key pair to ensure user can start ssh session to localhost for tests
   - ssh-keygen -b 2048 -t rsa -f /home/travis/.ssh/id_rsa -N ""
   - cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
